# Sentinel

./: .env.example  .gitignore  README.md  landingpage.html  netlify.toml  package-lock.json  package.json
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  adapters.py  auth.py  config.py  database.py  db.py  dependencies.py  detectors.py  exceptions.py  main.py  middleware.py  models.py  repository.py  schemas.py  security.py  services.py  settings.py
apps/api/app/routers/: alerts.py  auth.py  checks.py  dashboard.py  endpoints.py  users.py
apps/api/app/schemas/: alerts.py  auth.py  checks.py  dashboard.py  endpoints.py
apps/api/app/services/: auth_service.py  dashboard_service.py  email_service.py
apps/api/tests/: test_api.py
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.js  page.js
apps/web/app/[lang]/: pricing.js
apps/web/app/api/checkout/: route.js
apps/web/app/api/waitlist/: route.js
apps/web/app/app/: page.js
apps/web/app/beta/: page.js
apps/web/app/docs/: page.js
apps/web/app/pricing/: page.js
apps/web/components/: site-shell.js  waitlist-form.js
apps/web/lib/: waitlist-store.js
apps/worker/: README.md  pyproject.toml
apps/worker/worker/: main.py
docs/: api-contracts.md  build-status.md  legacy-adapters.md  supabase-local.md
examples/express-demo/: README.md  package.json  server.js
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_initial.sql
