[project]
name = "sentinelapi-api"
version = "0.1.0"
description = "FastAPI backend for SentinelAPI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pydantic>=2.9",
  "httpx>=0.28"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
